# colobridge-test-task

./: .env.example  README.md  app.py  celery_app.py  config.py  dependencies.py  docker-compose.yml  pyproject.toml  utils.py
database/migrations/: 0001__init.sql
src/application/: dto.py  interactors.py  interfaces.py
src/infrastructure/: repository.py  text_repository.py  worker.py
