[tool.poetry]
name = "colobridge-test-task"
version = "0.1.0"
description = ""
authors = ["gaponukz <gaponukz54@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = {extras = ["redis"], version = "^5.4.0"}
celery-types = "^0.22.0"
fastapi = "^0.115.6"
boto3 = "^1.35.96"
jose = "^1.0.0"
uvicorn = "^0.34.0"
python-jose = "^3.3.0"
pydantic-settings = "^2.7.1"
requests = "^2.32.3"
redis = "^5.2.1"
isort = "^5.13.2"
black = "^24.10.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
